# capture-card-viewer-tauri

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  rollup.config.js
public/: index.html
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
